[gd_scene load_steps=9 format=2]

[ext_resource path="res://PNG/Character_idle.png" type="Texture" id=1]
[ext_resource path="res://Script/frame_unit.gd" type="Script" id=2]
[ext_resource path="res://UnitSM.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scene/Walk_right.tres" type="Animation" id=4]
[ext_resource path="res://Scene/Running_right.tres" type="Animation" id=5]

[sub_resource type="ShaderMaterial" id=1]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 5.9015, 11.7 )

[sub_resource type="CircleShape2D" id=3]
radius = 149.388

[node name="Unit" type="KinematicBody2D" groups=[
"unit",
]]
material = SubResource( 1 )
script = ExtResource( 2 )

[node name="Selected" type="Sprite" parent="."]
position = Vector2( 95.6845, 51.9123 )
scale = Vector2( 0.182471, 0.169672 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Running_right = ExtResource( 5 )
anims/Walk_right = ExtResource( 4 )

[node name="StopTimer" type="Timer" parent="."]

[node name="UnitSM" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 95.374, 57.8271 )
shape = SubResource( 5 )
disabled = true

[node name="VisionRange" type="Area2D" parent="." groups=[
"unit",
]]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionRange"]
shape = SubResource( 3 )
disabled = true

[connection signal="timeout" from="StopTimer" to="UnitSM" method="_on_StopTimer_timeout"]
[connection signal="body_entered" from="VisionRange" to="." method="_on_VisionRange_body_entered"]
[connection signal="body_exited" from="VisionRange" to="." method="_on_VisionRange_body_exited"]
